Fix Maven publication info

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ yarn_mappings=1.14.4+build.4
 loader_version=0.4.8+build.159
 # Mod Properties
 mod_version=0.1.0
-maven_group=com.skaggsm.treechoppermod
+maven_group=com.skaggsm
 archives_base_name=fabric-tree-chopper
 curseforge_id=000000
 # Dependencies
