Remove user-specific run configurations from versioning and explicitly ignore them

--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,5 @@ Temporary Items
 
 # Fabric and Loom .minecraft folder
 run/
+.idea/runConfigurations/Minecraft_Client.xml
+.idea/runConfigurations/Minecraft_Server.xml
