--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-    id "java"
-    id "idea"
-    id "maven-publish"
-    id "fabric-loom" version "0.2.5-SNAPSHOT"
-    id "com.github.ben-manes.versions" version "0.21.0"
-    id "com.github.johnrengelman.shadow" version "5.1.0"
-    id "com.matthewprenger.cursegradle" version "1.3.0"
+    id 'java'
+    id 'idea'
+    id 'maven-publish'
+    id 'fabric-loom' version '0.2.5-SNAPSHOT'
+    id 'com.github.ben-manes.versions' version '0.21.0'
+    id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id 'com.matthewprenger.cursegradle' version '1.3.0'
     id 'org.jetbrains.kotlin.jvm' version '1.3.40'
 }
 
@@ -16,16 +16,16 @@ configurations {
 
 repositories {
     maven {
-        url = "http://maven.fabricmc.net/"
-        name = "Fabric"
+        url = 'http://maven.fabricmc.net/'
+        name = 'Fabric'
     }
     maven {
-        url = "https://minecraft.curseforge.com/api/maven"
-        name = "CurseForge"
+        url = 'https://minecraft.curseforge.com/api/maven'
+        name = 'CurseForge'
     }
     maven {
         url = 'http://maven.sargunv.s3-website-us-west-2.amazonaws.com/'
-        name = "Sargunv"
+        name = 'Sargunv'
     }
     jcenter()
 }
@@ -34,7 +34,7 @@ sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 archivesBaseName = project.archives_base_name
-version = project.mod_version + "-dev"
+version = project.mod_version + '-dev'
 group = project.maven_group
 
 minecraft {
@@ -49,26 +49,26 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation "net.fabricmc:fabric-language-kotlin:1.3.40+build.1"
-    include "net.fabricmc:fabric-language-kotlin:1.3.40+build.1"
+    modImplementation 'net.fabricmc:fabric-language-kotlin:1.3.40+build.1'
+    include 'net.fabricmc:fabric-language-kotlin:1.3.40+build.1'
 
-    modImplementation "cloth-config:ClothConfig:0.2.4.17"
-    include "cloth-config:ClothConfig:0.2.4.17"
+    modImplementation 'cloth-config:ClothConfig:0.2.4.17'
+    include 'cloth-config:ClothConfig:0.2.4.17'
 
-    modImplementation "me.sargunvohra.mcmods:auto-config:1.2.0+mc1.14.4"
-    include "me.sargunvohra.mcmods:auto-config:1.2.0+mc1.14.4"
+    modImplementation 'me.sargunvohra.mcmods:auto-config:1.2.0+mc1.14.4'
+    include 'me.sargunvohra.mcmods:auto-config:1.2.0+mc1.14.4'
 
-    modImplementation "io.github.prospector:modmenu:1.7.5+build.114"
+    modImplementation 'io.github.prospector:modmenu:1.7.5+build.114'
 }
 
 processResources {
-    inputs.properties "version": project.version,
-            "archives_base_name": project.archives_base_name
+    inputs.properties 'version': project.version,
+            'archives_base_name': project.archives_base_name
 
     from(sourceSets.main.resources.srcDirs) {
-        include "fabric.mod.json"
-        expand "version": project.version,
-                "archives_base_name": project.archives_base_name
+        include 'fabric.mod.json'
+        expand 'version': project.version,
+                'archives_base_name': project.archives_base_name
     }
 }
 
@@ -76,25 +76,25 @@ processResources {
 // this fixes some edge cases with special characters not displaying correctly
 // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
+    options.encoding = 'UTF-8'
 }
 
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
+// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the 'build' task
 // if it is present.
 // If you remove this task, sources will not be generated.
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = "sources"
+    classifier = 'sources'
     from sourceSets.main.allSource
 }
 
 jar {
-    from "LICENSE"
+    from 'LICENSE'
 }
 
 // Configure shadowing
 shadowJar {
     configurations = [project.configurations.shaded]
-    //relocate "some.library", "my.mod.shadowed.some.library"
+    //relocate 'some.library', 'my.mod.shadowed.some.library'
 }
 
 remapJar {
@@ -126,19 +126,19 @@ publishing {
 // Configure CurseForge publishing
 curseforge {
     // Stored in ~/.gradle/gradle.properties
-    if (project.hasProperty("curseApiKey"))
+    if (project.hasProperty('curseApiKey'))
         apiKey = project.curseApiKey
     else
-        println "No CurseForge API key found, 'curseforge' tasks will not work"
+        println 'No CurseForge API key found, \'curseforge\' tasks will not work'
 
     project {
         id = project.curseforge_id
-        releaseType = "alpha"
+        releaseType = 'alpha'
         addGameVersion "$project.minecraft_version"
         mainArtifact(jar) {
             displayName = "$archives_base_name-$project.version"
             relations {
-                requiredDependency "fabric"
+                requiredDependency 'fabric'
             }
         }
     }
