--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@ plugins {
     id 'idea'
     id 'maven-publish'
     id 'fabric-loom' version '0.2.5-SNAPSHOT'
-    id 'com.github.ben-manes.versions' version '0.22.0'
+    id 'com.github.ben-manes.versions' version '0.24.0'
     id 'com.github.johnrengelman.shadow' version '5.1.0'
-    id 'com.matthewprenger.cursegradle' version '1.3.0'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.41'
+    id 'com.matthewprenger.cursegradle' version '1.4.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.50'
     id 'org.shipkit.java' version '2.2.5'
 }
 
@@ -49,8 +49,8 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation 'net.fabricmc:fabric-language-kotlin:1.3.40+build.1'
-    include 'net.fabricmc:fabric-language-kotlin:1.3.40+build.1'
+    modImplementation 'net.fabricmc:fabric-language-kotlin:1.3.50+build.+'
+    include 'net.fabricmc:fabric-language-kotlin:1.3.50+build.+'
 
     modImplementation 'cloth-config:ClothConfig:0.2.4.17'
     include 'cloth-config:ClothConfig:0.2.4.17'
@@ -58,7 +58,7 @@ dependencies {
     modImplementation 'me.sargunvohra.mcmods:auto-config:1.2.0+mc1.14.4'
     include 'me.sargunvohra.mcmods:auto-config:1.2.0+mc1.14.4'
 
-    modImplementation 'io.github.prospector:modmenu:1.7.5+build.114'
+    modImplementation 'io.github.prospector:modmenu:1.7.10+build.+'
 }
 
 processResources {
