--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # Update using https://modmuss50.me/fabric.html
 minecraft_version=1.14.4
-yarn_mappings=1.14.4+build.9
-loader_version=0.4.8+build.159
+yarn_mappings=1.14.4+build.12
+loader_version=0.6.1+build.165
 # Mod Properties
 maven_group=com.skaggsm
 archives_base_name=fabric-tree-chopper
 curseforge_id=333854
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-fabric_version=0.3.0+build.207
+fabric_version=0.3.2+build.219-1.15
