--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,11 @@ plugins {
     id 'java'
     id 'idea'
     id 'maven-publish'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
-    id 'fabric-loom' version '0.2.7-SNAPSHOT'
+    id 'fabric-loom' version '0.4-SNAPSHOT'
     id 'com.github.ben-manes.versions' version '0.28.0'
     id 'com.github.johnrengelman.shadow' version '5.2.0'
     id 'com.matthewprenger.cursegradle' version '1.4.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
     id 'org.shipkit.java' version '2.3.1'
 }
 
@@ -48,16 +48,16 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation 'net.fabricmc:fabric-language-kotlin:1.3.61+build.2'
-    include 'net.fabricmc:fabric-language-kotlin:1.3.61+build.2'
+    modImplementation 'net.fabricmc:fabric-language-kotlin:1.3.72+build.1'
+    include 'net.fabricmc:fabric-language-kotlin:1.3.72+build.1'
 
-    modImplementation 'me.shedaniel.cloth:config-2:2.14.1'
-    include 'me.shedaniel.cloth:config-2:2.14.1'
+    modImplementation 'io.github.prospector:modmenu:1.12.2+build.17'
 
-    modImplementation 'me.sargunvohra.mcmods:autoconfig1u:2.2.0'
-    include 'me.sargunvohra.mcmods:autoconfig1u:2.2.0'
+    modImplementation 'me.shedaniel.cloth:config-2:4.5.6'
+    include 'me.shedaniel.cloth:config-2:4.5.6'
 
-    modImplementation 'io.github.prospector:modmenu:1.10.2+build.32'
+    modImplementation 'me.sargunvohra.mcmods:autoconfig1u:3.2.0-unstable'
+    include 'me.sargunvohra.mcmods:autoconfig1u:3.2.0-unstable'
 }
 
 processResources {
