--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,4 @@ archives_base_name=fabric-tree-chopper
 curseforge_id=333854
 # Dependencies
 fabric_version=0.14.0+build.371-1.16
+fiber_version=0.23.0-1
