--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,6 @@ repositories {
         url = 'https://minecraft.curseforge.com/api/maven'
         name = 'CurseForge'
     }
-    maven {
-        url = 'https://dl.bintray.com/shedaniel/autoconfig1u/'
-    }
     jcenter()
 }
 
@@ -53,19 +50,16 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation 'net.fabricmc:fabric-language-kotlin:1.3.72+build.1'
-    include 'net.fabricmc:fabric-language-kotlin:1.3.72+build.1'
+    modImplementation "net.fabricmc:fabric-language-kotlin:${project.kotlin_version}"
+    include "net.fabricmc:fabric-language-kotlin:${project.kotlin_version}"
 
     modImplementation 'io.github.prospector:modmenu:1.12.2+build.17'
 
-    modImplementation 'me.shedaniel.cloth:config-2:4.5.6'
-    include 'me.shedaniel.cloth:config-2:4.5.6'
+    modImplementation "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
+    include "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
 
-    modImplementation 'me.sargunvohra.mcmods:autoconfig1u:3.2.0-unstable'
-    include 'me.sargunvohra.mcmods:autoconfig1u:3.2.0-unstable'
-
-    modImplementation "me.shedaniel.cloth:fiber2cloth:3.0.1"
-    include "me.shedaniel.cloth:fiber2cloth:3.0.1"
+    modImplementation "me.shedaniel.cloth:fiber2cloth:${project.fiber_2_cloth_version}"
+    include "me.shedaniel.cloth:fiber2cloth:${project.fiber_2_cloth_version}"
 
     modImplementation "me.zeroeightsix:fiber:${project.fiber_version}"
     include "me.zeroeightsix:fiber:${project.fiber_version}"
