--- a/gradle.properties
+++ b/gradle.properties
@@ -11,4 +11,7 @@ archives_base_name=fabric-tree-chopper
 curseforge_id=333854
 # Dependencies
 fabric_version=0.14.0+build.371-1.16
+kotlin_version=1.3.72+build.1
+cloth_config_version=4.6.0
+fiber_2_cloth_version=3.0.1
 fiber_version=0.23.0-1
