--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # Update using https://modmuss50.me/fabric.html
-minecraft_version=1.16.1
-yarn_mappings=1.16.1+build.17
-loader_version=0.8.8+build.202
+minecraft_version=1.16.2
+yarn_mappings=1.16.2+build.46
+loader_version=0.9.2+build.206
 # Mod Properties
 maven_group=com.skaggsm
 archives_base_name=fabric-tree-chopper
 curseforge_id=333854
 # Dependencies
-fabric_version=0.14.0+build.371-1.16
+fabric_version=0.20.1+build.401-1.16
+# Don't include the standard library, it's already bundled with fabric-language-kotlin
+kotlin.stdlib.default.dependency=false
