--- a/gradle.properties
+++ b/gradle.properties
@@ -5,19 +5,19 @@ kotlin.code.style=official
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # Update using https://modmuss50.me/fabric.html
-minecraft_version=1.16.4
-yarn_mappings=1.16.4+build.7
-loader_version=0.10.8
+minecraft_version=1.17
+yarn_mappings=1.17+build.11
+loader_version=0.11.6
 # Mod Properties
 maven_group=com.skaggsm
 archives_base_name=fabric-tree-chopper
 curseforge_id=333854
 # Dependencies
-fabric_version=0.28.4+1.16
-kotlin_version=1.4.21+build.1
-cloth_config_version=4.8.3
-fiber_2_cloth_version=3.1.1
+fabric_version=0.35.1+1.17
+kotlin_version=1.6.1+kotlin.1.5.10
+cloth_config_version=5.0.34
+fiber_2_cloth_version=3.2.0
 fiber_version=0.23.0-2
-modmenu_version=1.14.13+build.22
+modmenu_version=2.0.2
 # Don't include the standard library, it's already bundled with fabric-language-kotlin
 kotlin.stdlib.default.dependency=false
