--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
-          java-version: '16'
+          distribution: 'temurin'
+          java-version: '17'
       - uses: burrunan/gradle-cache-action@v1
         with:
           gradle-distribution-sha-256-sum-warning: false
@@ -36,8 +36,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
-          java-version: '16'
+          distribution: 'temurin'
+          java-version: '17'
       - uses: burrunan/gradle-cache-action@v1
         with:
           gradle-distribution-sha-256-sum-warning: false
@@ -50,8 +50,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
-          java-version: '16'
+          distribution: 'temurin'
+          java-version: '17'
       - uses: burrunan/gradle-cache-action@v1
         with:
           gradle-distribution-sha-256-sum-warning: false
@@ -73,8 +73,8 @@ jobs:
 
       - uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
-          java-version: '16'
+          distribution: 'temurin'
+          java-version: '17'
 
       - uses: burrunan/gradle-cache-action@v1
         with:
