Add Modrinth publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ loader_version=0.14.6
 maven_group=com.skaggsm
 archives_base_name=fabric-tree-chopper
 curseforge_id=333854
+modrinth_id=nuvrbzBD
 # Dependencies
 fabric_version=0.55.2+1.19
 kotlin_version=1.7.4+kotlin.1.6.21
